2005-07-12  Nobuo Yamashita  <nobsun@sampou.org>

	* cgi/kahua.cgi.in:
	guraded IO

	* src/kahua-server.scm:
	- guarded read operation in accept-handler.
	- remove SIGPIPE handler.
	- log when errors without caught by signal handlers occur.
	
2005-07-11  Nobuo Yamashita  <nobsun@sampou.org>

	* cgi/kahua-cgi.in: 
	log when SPVR-ERROR occured.

	* src/kahua-server.scm (run-srver):
	added guard in replying function for closing connection by client.
	
	* src/kahua/test/xml.scm:
	added coding directive.

2005-07-04  Nobuo Yamashita  <nobsun@sampou.org>

	* examples/Makefile.in, src/Makefile.in, test/Makefile.in:
	  removed ces conversion process in building.

	* examples/lambdabooks.init.in, examples/*/*.kahua.in,
	  src/kahua/pdf/typeset.scm.in, test/*.kahua.in:
	  added coding ditective at top of file, and removing .in
	  extension from file name.

	* test/*.scm.in:
	  added coding ditective at top of file.

2005-06-30  Shiro Kawai  <shiro@acm.org>

	* src/kahua/server.scm (sxml:attr->xml-bis attr): omit attributes
	  that have #f in their value.  This simplifies SXML constuction
	  a lot.

2005-06-26  TAHARA Yusei  <yusei@domen.cx>

	* src/kahua/plugin.scm, test/plugin.scm:
	  fixed a bug that loads object that is same name as given one
	  in another module.

2005-06-04  Nobuo Yamashita  <nobsun@sampou.org>

	* plugins/allow-module.scm:
	Added text.tree module.

2005-06-01  Nobuo Yamashita  <nobsun@sampou.org>

	* Release 0.3.2
	- Fixed bug which disabled using with new Gauche-0.8.4.

2005-04-20  Kenji Hisazumi  <nel@soraneko.com>

	* src/kahua/elem.scm (b/, i/): fixed typo arg -> args

2005-04-12  Kenji Hisazumi  <nel@soraneko.com>

	* src/kahua/session.scm (make-state-key, make-cont-key): 
	- fixed a bug of the case where a duplicated key are generated.

2005-03-23  Kenji Hisazumi  <nel@soraneko.com>

	* src/kahua/persistence.scm:
	- refactored a mecanism to provide in-db in-memory consistency.
	Now, all in-memory objects obtained from db are managed over